[workspace]
members = [
  # system libraries
  "lib/async-fs",
  "lib/flatfs",
  "lib/frusa",
  "lib/rt.vdso",
  "lib/moto-async",
  "lib/moto-io-internal",
  "lib/moto-ipc",
  "lib/moto-log",
  "lib/moto-mpmc",
  "lib/moto-rt",
  "lib/moto-sys",
  "lib/moto-sys-io",
  "lib/motor-fs",
  "lib/srfs",
  "lib/srfs-core",
  "lib/timeq",
  "lib/virtio",
  "lib/virtio-async",

  # system binaries
  "kernel",
  "sys-init",
  "sys-io",
  "sys-log",
  "sys-tty",

  # tools
  "tools/mdbg",
  "tools/sysbox",

  # tests
  "tests/crossbench",
  "tests/mio-test",
  "tests/systest",
  "tests/tokio-tests",
]
resolver = "2"

[patch.crates-io]
flatfs       = { path = "lib/flatfs"          }
moto-ipc     = { path = "lib/moto-ipc"        }
moto-log     = { path = "lib/moto-log"        }
moto-rt      = { path = "lib/moto-rt"         }
moto-sys     = { path = "lib/moto-sys"        }
moto-sys-io  = { path = "lib/moto-sys-io"     }
moto-virtio  = { path = "lib/virtio"          }
srfs-core    = { path = "lib/srfs-core"       }
srfs         = { path = "lib/srfs"            }

mio          = { git = "https://github.com/moturus/mio.git", branch = "mio-motor-v1.0.4_2025-10-07" }
tokio        = { git = "https://github.com/moturus/tokio.git", branch = "tokio-motor-1.47.1_2025-10-07" }

getrandom    = { path = "../third_party/getrandom-0.2.16" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
strip = true
codegen-units = 1
