[workspace]
members = [
  # system libraries (legacy, to be refactored)
  "lib/async-fs",
  "lib/moto-async",
  "lib/moto-dns",
  "lib/moto-io-internal",
  "lib/moto-ipc",
  "lib/moto-log",
  "lib/moto-mpmc",
  "lib/moto-sys-io",
  "lib/motor-fs",
  "lib/timeq",
  "lib/virtio-async",

  # various generic tools (not Motor OS specific)
  "lib/fittings",
  "lib/frusa",

  # system libraries
  "lib/moto-rt",
  "lib/moto-rt-cabi",
  "lib/moto-stats",
  "lib/moto-sys",
  "lib/rt.vdso",

  # various higher-level tools (Motor OS specific)
  "lib/moto-tooling",

  # system binaries
  "dns-resolver",
  "kernel",
  "strobe",
  "sys-init",
  "sys-io",
  "sys-tty",

  # tools
  "tools/mdbg",
  "tools/sysbox",

  # tests
  "tests/crossbench",
  "tests/mio-test",
  "tests/systest",
  "tests/tokio-tests",
]
resolver = "2"

[patch.crates-io]
moto-ipc     = { path = "lib/moto-ipc"        }
moto-log     = { path = "lib/moto-log"        }
moto-rt      = { path = "lib/moto-rt"         }
moto-sys     = { path = "lib/moto-sys"        }
moto-sys-io  = { path = "lib/moto-sys-io"     }

mio          = { git = "https://github.com/moturus/mio.git", branch = "mio-motor-v1.0.4_2025-10-07" }
tokio        = { git = "https://github.com/moturus/tokio.git", branch = "tokio-motor-1.47.1_2025-10-07" }
smoltcp      = { git = "https://github.com/moturus/smoltcp.git", branch = "motor-os" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
strip = true
codegen-units = 1
