[package]
name = "moto-ipc"
version = "0.2.5"
authors = ["The Moturus Project Developers"]
license = "MIT OR Apache-2.0"
keywords = ["moturus", "motor-os"]
readme = "README.md"
repository = "https://github.com/moturus/motor-os"
description = "Motor OS IPC (nostd) crate."
edition = "2021"

[dependencies]
moto-sys = { path = "../moto-sys" }

alloc = { version = "1.0.0", package = "rustc-std-workspace-alloc", optional = true }
compiler_builtins = { version = "0.1", optional = true }
core = { version = "1.0.0", package = "rustc-std-workspace-core", optional = true }

[features]
rustc-dep-of-std = [ "alloc", "compiler_builtins", "core", "moto-sys/rustc-dep-of-std" ]
