[package]
name = "moto-log"
authors = ["The Moturus Project Developers"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
moto-ipc = { path = "../../lib/moto-ipc" }
moto-sys = { path = "../../lib/moto-sys" }
spin = { path = "../../third_party/spin"}

log = "0.4.21"

[features]
