[package]
name = "kernel"
authors = ["The Motor OS Project Developers"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]

# internal dependencies
moto-rt  = { path = "../lib/moto-rt" , features = ["base"] }
moto-sys = { path = "../lib/moto-sys", default-features = false, features = ["base"] }
frusa    = { path = "../lib/frusa" }

# external dependencies
bitflags              = { path = "../../third_party/bitflags"     }
elfloader             = { path = "../../third_party/elfloader"    }
intrusive-collections = { path = "../../third_party/intrusive-rs" }
x86                   = { path = "../../third_party/x86"          }
x86_64                = { path = "../../third_party/x86_64"       }

log = "0.4.28"
xsave = "2.0.2"

[features]

