[package]
name = "sys-io"
authors = ["The Moturus Project Developers"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal.
flatfs       = { path = "../lib/flatfs"      }
moto-ipc     = { path = "../lib/moto-ipc"    }
moto-rt      = { path = "../lib/moto-rt"     }
moto-sys     = { path = "../lib/moto-sys"    }
moto-sys-io  = { path = "../lib/moto-sys-io", features = ["std"] }
moto-virtio  = { path = "../lib/virtio"      }
srfs         = { path = "../lib/srfs"        }

# External.
elfloader    = { path = "../../third_party/elfloader" }
crossbeam    = "0.8.4"
ipnetwork    = "0.20.0"
log          = "0.4.20"
serde        = { version = "1.0.*", features = ["derive"] }
smoltcp      = "0.12.0"
spin         = { path = "../../third_party/spin" }
toml         = "0.8.10"

[profile.release]
codegen-units = 1
lto = true
