[package]
name = "sys-io"
authors = ["The Motor OS Project Developers"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal.
async-fs         = { path = "../lib/async-fs", features = ["moto-rt"] }
flatfs           = { path = "../lib/flatfs"           }
moto-async       = { path = "../lib/moto-async"       }
moto-io-internal = { path = "../lib/moto-io-internal" }
moto-ipc         = { path = "../lib/moto-ipc"         }
moto-rt          = { path = "../lib/moto-rt"          }
moto-sys         = { path = "../lib/moto-sys"         }
moto-sys-io      = { path = "../lib/moto-sys-io", features = ["std"] }
moto-virtio      = { path = "../lib/virtio"           }
motor-fs         = { path = "../lib/motor-fs"         }
srfs             = { path = "../lib/srfs"             }
timeq            = { path = "../lib/timeq"            }
virtio-async     = { path = "../lib/virtio-async"     }

# External.
async-trait  = "0.1.88"
crossbeam    = "0.8.4"
elfloader    = { path = "../../third_party/elfloader" }
ipnetwork    = "0.20.0"
log          = "0.4.28"
rand         = { version = "0.9.0", features = ["small_rng"], default-features = false }
serde        = { version = "1.0.*", features = ["derive"] }
smoltcp      = "0.12.0"
toml         = "0.9.0"
zerocopy     = { version = "0.8", features = ["std", "derive"] }

[features]
motor-fs = []
