[package]
name = "sys-log"
authors = ["The Moturus Project Developers"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
moto-ipc = { path = "../lib/moto-ipc" }
moto-sys = { path = "../lib/moto-sys" }
moto-log = { path = "../lib/moto-log" }

[patch.crates-io]
moto-ipc = { path = "../lib/moto-ipc" }
moto-sys = { path = "../lib/moto-sys" }
moto-log = { path = "../lib/moto-log" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
strip = true
codegen-units = 1

