[package]
name = "sys-stats-reg"
authors = ["The Motor OS Project Developers"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
moto-ipc   = { path = "../lib/moto-ipc"   }
moto-rt    = { path = "../lib/moto-rt"    }
moto-sys   = { path = "../lib/moto-sys"   }
moto-log   = { path = "../lib/moto-log"   }
moto-stats = { path = "../lib/moto-stats" }

log = "=0.4.28"
