[package]
name = "sys-tty"
authors = ["The Moturus Project Developers"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
moto-ipc = { path = "../lib/moto-ipc" }
moto-rt  = { path = "../lib/moto-rt"  }
moto-sys = { path = "../lib/moto-sys" }
x86_64   = { path = "../../third_party/x86_64"}  # Used for port I/O.

