[package]
name = "async-fs"
authors = ["The Motor OS Project Developers"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

[features]
default  = ["std"]
file-dev = ["camino", "tokio/rt", "tokio/time", "tokio/fs", "tokio/io-util"]
moto-rt  = ["dep:moto-async", "dep:moto-rt"]
std = []

[dependencies]
moto-async = { path = "../moto-async", optional = true }
moto-rt    = { path = "../moto-rt"   , optional = true }
async-trait = "0.1.88"
log = "0.4.28"
lru = "0.14.0"
bytemuck = { version = "1.24", features = ["latest_stable_rust"] }

tokio  = { version = "1.44.2", optional = true, default-features = false }
camino = { version = "1.1.10", optional = true }
