[package]
name = "async-fs"
authors = ["The Motor OS Project Developers"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

[features]
default  = ["std"]
std = []

[dependencies]
async-trait = "0.1.88"
log = "0.4.28"
lru = "0.14.0"
bytemuck = { version = "1.24", features = ["latest_stable_rust"] }

[target.'cfg(target_os = "motor")'.dependencies]
moto-rt    = { path = "../moto-rt"    }
moto-async = { path = "../moto-async" }

[target.'cfg(not(target_os = "motor"))'.dependencies]
tokio  = { version = "1.44.2", default-features = false, features = ["fs", "io-util", "rt", "sync", "time"] }
camino = { version = "1.1.10" }
