[package]
name = "frusa"
version = "0.1.3"
edition = "2024"
description = "A system allocator with reclaim."
repository = "https://github.com/moturus/motor-os"
keywords = ["allocator", "no_std", "global_allocator"]
categories = ["no-std", "memory-management"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
core = { version = "1.0.0", package = "rustc-std-workspace-core", optional = true }

[dev-dependencies]
rand = "0.8"
spin = "0.9.8"

[features]
rustc-dep-of-std = ["core"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [ 'cfg(test)'] }
