[package]
name = "moto-ipc"
version = "0.2.6"
authors = ["The Moturus Project Developers"]
license = "MIT OR Apache-2.0"
keywords = ["moturus", "motor-os"]
readme = "README.md"
repository = "https://github.com/moturus/motor-os"
description = "Motor OS IPC (nostd) crate."
edition = "2021"

[dependencies]
moto-rt  = { path = "../moto-rt"  }
moto-sys = { path = "../moto-sys" }

[features]
stdio-pipe = []
