[package]
name = "moto-log"
authors = ["The Motor OS Project Developers"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
moto-ipc = { path = "../../lib/moto-ipc" }
moto-rt  = { path = "../../lib/moto-rt"  }
moto-sys = { path = "../../lib/moto-sys" }

log = "=0.4.27"

[features]
