[package]
name = "moto-rt"
authors = ["The Moturus Project Developers"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[lib]
# The following magic line makes rust analyzer stop
# complaining about the panic handler.
test = false

[dependencies]
core              = { version = "1.0.0", package = "rustc-std-workspace-core", optional = true }
compiler_builtins = { version = "0.1", optional = true }

[features]
rustc-dep-of-std = [
    "core",
    "compiler_builtins",
]
