[package]
name = "moto-rt"
authors = ["The Moturus Project Developers"]
license = "MIT OR Apache-2.0"
keywords = ["moturus", "motor-os"]
readme = "README.md"
repository = "https://github.com/moturus/motor-os"
description = "Motor OS Runtime."
version = "0.2.2"
edition = "2021"

[lib]
# The following magic line makes rust analyzer stop
# complaining about the panic handler.
test = false

[dependencies]
alloc             = { version = "1.0.0", package = "rustc-std-workspace-alloc", optional = true }
core              = { version = "1.0.0", package = "rustc-std-workspace-core", optional = true }
compiler_builtins = { version = "0.1", optional = true }

[features]
base = []
rustc-dep-of-std = [
    "alloc",
    "core",
    "compiler_builtins",
]
