[package]
name = "moto-rt"
authors = ["The Motor OS Project Developers"]
license = "MIT OR Apache-2.0"
keywords = ["motor", "motor-os"]
readme = "README.md"
repository = "https://github.com/moturus/motor-os"
description = "Motor OS Runtime."
version = "0.15.3"
edition = "2024"

[lib]
# The following magic line makes rust analyzer stop
# complaining about the panic handler.
test = false

[dependencies]
alloc             = { version = "1.0.0", package = "rustc-std-workspace-alloc", optional = true }
core              = { version = "1.0.0", package = "rustc-std-workspace-core", optional = true }

[features]
base = []
libc = []
rustc-dep-of-std = [
    "alloc",
    "core",
    "libc",
]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [ 'cfg(test)'] }
