[package]
name = "moto-runtime"
version = "0.2.9"
authors = ["The Moturus Project Developers"]
license = "MIT OR Apache-2.0"
keywords = ["moturus", "motor-os"]
readme = "README.md"
repository = "https://github.com/moturus/motor-os"
description = "Motor OS Runtime."
edition = "2021"

[dependencies]
moto-rt   = { path = "../moto-rt"  }
moto-ipc  = { path = "../moto-ipc" }
moto-sys  = { path = "../moto-sys" }
moto-sys-io = { path = "../moto-sys-io" }
